@@ -1,5 +1,4 @@
 File "pr5026_bad.ml", line 11, characters 0-36:
 11 | type -'typing wrapped = private sexp
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Error: The definition of wrapped contains a cycle:
-       sexp
+Error: The type abbreviation wrapped is cyclic
